# internal/wave/entity/dialogue.go
@@ -11,9 +11,7 @@ type (
 		Id            uuid.UUID `bun:",unique"`
 		FirstUserId   uuid.UUID `bun:",pk"`
 		SecondUserId  uuid.UUID `bun:",pk"`
-		// Messages       []*Message        `bun:"m2m:wave.dialogue_message,join:Dialogue=Message"`
 		// Settings *DialogueSettings `bun:"rel:has-one"`
-		// PinnedMessages []*Message        `bun:"m2m:wave.dialogue_pinned,join:Dialogue=Message"`
 	}
 
 	DialogueSettings struct {
